// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  max-width: 100%;
  position: relative;
  width: 100%;
}

.emotion-2 {
  height: 0;
  pointer-events: none;
  padding-bottom: 100%;
}

<div
  class="components-aspect-ratio emotion-0 emotion-1"
  data-wp-c16t="true"
  data-wp-component="AspectRatio"
>
  <img
    alt="Snow"
  />
  <div
    aria-hidden="true"
    class="emotion-2 emotion-3"
  />
</div>
`;

exports[`props should render with custom ratio 1`] = `
.emotion-0 {
  max-width: 100%;
  position: relative;
  width: 100%;
}

.emotion-2 {
  height: 0;
  pointer-events: none;
  padding-bottom: 56.25%;
}

<div
  class="components-aspect-ratio emotion-0 emotion-1"
  data-wp-c16t="true"
  data-wp-component="AspectRatio"
>
  <img
    alt="Snow"
  />
  <div
    aria-hidden="true"
    class="emotion-2 emotion-3"
  />
</div>
`;

exports[`props should render with custom width 1`] = `
.emotion-0 {
  max-width: 100%;
  position: relative;
  width: 100%;
  max-width: 320px;
}

.emotion-2 {
  height: 0;
  pointer-events: none;
  padding-bottom: 42.857142857142854%;
}

<div
  class="components-aspect-ratio emotion-0 emotion-1"
  data-wp-c16t="true"
  data-wp-component="AspectRatio"
>
  <img
    alt="Snow"
  />
  <div
    aria-hidden="true"
    class="emotion-2 emotion-3"
  />
</div>
`;
